src/objects/Trade_Agreement__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <description>ITA Barrier Trade Agreement</description>
    <fields>
        <fullName>Agreement_Description__c</fullName>
        <label>Agreement Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Agreement_Status__c</fullName>
        <label>Agreement Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Agreement_Text__c</fullName>
        <label>Agreement Text</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Agreement_Type__c</fullName>
        <label>Agreement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Free Trade Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bilateral Investment Treaties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trade Promotion Agreements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Agreement on Tariffs and Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regional Trade Agreements</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trade_Agreements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Article_Expiration_Date__c</fullName>
        <label>Article Expiration Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <description>Add an attachment.</description>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Days_Since_Last_Published_Date__c</fullName>
        <formula>TODAY() - DATEVALUE( LastPublishedDate )</formula>
        <label>Days Since Last Published Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exporter_Guide__c</fullName>
        <label>Exporter Guide</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <formula>HYPERLINK(&quot;mailto:&quot; &amp; &quot;tradeagreements@trade.gov&quot; &amp; &quot;?subject=Feedback for &quot; + &quot;Article Number: &quot; + ArticleNumber + &quot; / &quot; + &quot;Article Title - &quot; + Title, &quot;Send email to provide feedback or contribute to this Trade Agreement.&quot;)</formula>
        <label>Feedback</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Known_As__c</fullName>
        <label>Known As</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_DMO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lead DMO</description>
        <label>Lead DMO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Barrier_Trade_Agreement</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Support_DMO__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Support DMO</description>
        <label>Supporting DMO</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Barrier_Trade_Agreement1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TARA_Document_Title__c</fullName>
        <description>TARA Document Title</description>
        <label>TARA Document Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Trade Agreements</label>
    <pluralLabel>Trade Agreements</pluralLabel>
</CustomObject>